Harden Guardian compatibility for Android 8+